added responsivness to appointment page and minor css changes

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </ul>
             </div>
             <div class="appointForm">
-                <form action="confirmation.html" id="appointForm" role="form" name="Form" onsubmit="details()">
+                <form action="appointment.html" id="appointForm" role="form" name="Form" onsubmit="details()">
                     <div class="formTitle">
                         <h1>Make an appointment</h1>
                     </div>
@@ -427,7 +427,7 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Developer's Linked <i
+            <p class="developers">Website Developer's Linked <i
                 class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="" target="_blank">Neelav Bhatiya</a>
