--- a/services.html
+++ b/services.html
@@ -360,7 +360,7 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Developers Linked <i
+            <p class="developers">Website Developer's Linked <i
                 class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="" target="_blank">Neelav Bhatiya</a>
