replaced filler text with actual content on index page

--- a/appointment.html
+++ b/appointment.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="appointStyles.css">
+    <link rel="icon" href="images/krishna_logo.jpg">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
@@ -64,8 +65,8 @@
                         Appointment'</b>, otherwise click on <b>'Back'</b> and change details.</li>
                 <li class="notePoints">On clicking <b>'Confirm Appointment'</b> a dialog box will appear which says
                     <b>SUCCESS! Your appointment has been successfully booked</b>, after that click <b>'Exit'</b>.</li>
-                <li class="notePoints">After your appointment is booked, click on <b>'Print'</b> to print appointment
-                    receipt and show it at hospital reception on appointment day.</li>
+                <li class="notePoints">After your appointment is booked, you may print the appointment
+                    receipt and show it at hospital reception on appointment day. (Optional)</li>
                 <li class="notePoints">If you are unable to make an appointment or face any other issues, please contact
                     <b>+91 9978637506</b> for further assistance.</li>
             </ul>
