--- a/services.html
+++ b/services.html
@@ -24,7 +24,8 @@
             <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp <p id='display'
                     onClick='copyText(this)'>+91 9978637506</p> (click to copy)
             </div>
-            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM and 5PM - 7PM
+            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM
+                and 5PM - 7PM
             </div>
             <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
             </div>
@@ -43,8 +44,10 @@
                 <div class="devs">Developer Contacts</div>
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
                 <span class="icons">
-                    <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/viskyyy.___/" target="_blank"><i class="fab fa-instagram" ></i></a>
+                    <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank"><i
+                            class="fab fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/viskyyy.___/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                     <a href="https://github.com/NerdyVisky" target="_blank"><i class="fab fa-github"></i></a>
                 </span>
             </ul>
@@ -57,7 +60,10 @@
                     <h1>Krishna Services</h1>
                 </div>
                 <div class="introDes">
-                    Since the past 27 years, Krishna Hospital has offered the best-in-class gynec services. Below
+                    Since the past 27 years, Krishna Hospital has offered the best-in-class gynec and obstretic
+                    services, from
+                    successfully conducting hundreds of high-risk medical procedures to providing excellent hospitality
+                    to its patients.
                 </div>
             </div>
             <div class="introImg">
@@ -74,15 +80,16 @@
                 <h1>Medical Procedures</h1>
             </div>
             <div class="medproDes">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsa omnis placeat mollitia at molestias
-                    repudiandae, assumenda quos esse suscipit, voluptatibus quaerat alias. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Molestias perferendis iusto magni eligendi ipsum a ad quibusdam
-                    similique ipsa accusamus cumque unde ea odit temporibus, eaque iste earum voluptatum deserunt?
+                <p> Every doctor at Krishna has decades of working experience in various high-risk situations behind
+                    them. Through these 27 years,
+                    Dr Nilesh Trivedi, himself has been involved in hundreds of critical situations. And through his
+                    skills and experience combined, he has exhibited a staggering success rate at these procedures.
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse quia vero ut sit asperiores iure
-                    voluptates architecto saepe, hic sequi temporibus numquam? Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Error quo, placeat hic et libero quaerat temporibus expedita ea officia numquam
-                    suscipit itaque in?</p>
+                <p>Moreover, Krishna Hospital is a destination where technology meets excellence. Along with a highly
+                    experienced working team, Krishna Hospital has incorporated an array of cutting-edge technological
+                    equipments into its services. However, the quality that differentiates Krishna from other hospitals
+                    is the extremely affordable pricing of such high-standard services. Illustrated below are the usual
+                    medical services and procedures offered at Krishna.</p>
             </div>
         </div>
         <div class="medprogrid">
@@ -91,8 +98,7 @@
                     <div class="itemTitle">
                         <h1>Routine Consultation</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias explicabo
-                        earum
+                    <div class="itemDes">Book an OPD appointment with Dr. Nilesh Trivedi for any sort of gynec/obstretic medical issue/advice.
 
                     </div>
                 </div>
@@ -108,7 +114,7 @@
                     <div class="itemTitle">
                         <h1>High-Risk Pregnancy Care</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem labore minima est
+                    <div class="itemDes">Provides assistance and care for any kind of high-risk pregnancy situations.
                     </div>
                 </div>
             </div>
@@ -117,8 +123,7 @@
                     <div class="itemTitle">
                         <h1>Infertility Treatments</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores est, sit,
-                        beatae
+                    <div class="itemDes">Experience parenthood through Krishna's efficient infertility treatments. 
                     </div>
                 </div>
                 <div class="itemImg oddImg">
@@ -230,58 +235,58 @@
                 <img src="images/mock_gallery_image.jpg" alt="">
             </div>
         </div>
-            <div class="roomBlock">
-                <div class="roomText evenRoom">
-                    <div class="roomTitle">
-                        <h1>Special Rooms</h1>
-                    </div>
-                    <div class="roomDes">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
-                            voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
-                            ipsum,
-                            dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
-                        </p>
-                    </div>
+        <div class="roomBlock">
+            <div class="roomText evenRoom">
+                <div class="roomTitle">
+                    <h1>Special Rooms</h1>
                 </div>
-                <div class="roomImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                <div class="roomDes">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
+                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
+                        ipsum,
+                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    </p>
                 </div>
             </div>
-                <div class="roomBlock">
-                    <div class="roomText">
-                        <div class="roomTitle">
-                            <h1>Semi-Special Rooms</h1>
-                        </div>
-                        <div class="roomDes">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem
-                                dolorum
-                                voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
-                                ipsum,
-                                dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="roomImg">
-                        <img src="images/mock_gallery_image.jpg" alt="">
-                    </div>
-                 </div>
-                 <div class="roomBlock">
-                    <div class="roomText evenRoom">
-                        <div class="roomTitle">
-                            <h1>General Ward</h1>
-                        </div>
-                        <div class="roomDes">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
-                                voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem ipsum,
-                                dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="roomImg">
-                        <img src="images/mock_gallery_image.jpg" alt="">
-                    </div>
-                    </div>
-                    
+            <div class="roomImg">
+                <img src="images/mock_gallery_image.jpg" alt="">
+            </div>
+        </div>
+        <div class="roomBlock">
+            <div class="roomText">
+                <div class="roomTitle">
+                    <h1>Semi-Special Rooms</h1>
+                </div>
+                <div class="roomDes">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem
+                        dolorum
+                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
+                        ipsum,
+                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    </p>
+                </div>
+            </div>
+            <div class="roomImg">
+                <img src="images/mock_gallery_image.jpg" alt="">
+            </div>
+        </div>
+        <div class="roomBlock">
+            <div class="roomText evenRoom">
+                <div class="roomTitle">
+                    <h1>General Ward</h1>
+                </div>
+                <div class="roomDes">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
+                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem ipsum,
+                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    </p>
+                </div>
+            </div>
+            <div class="roomImg">
+                <img src="images/mock_gallery_image.jpg" alt="">
+            </div>
+        </div>
+
     </section>
     <div class="scrolldown3">
         <img src="images/scroll_down-removebg-preview.png" alt="scroll down">
@@ -289,11 +294,16 @@
     <section id="gallery">
         <div class="galleryBlock">
             <h1 class="linespacing">section alignment</h1>
-            <div class="galleryTitle"> <h1>Gallery</h1></div>
-            <div class="galleryDes"><p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor dignissimos maxime illum 
-                officia a consectetur quis quae reiciendis? Itaque enim deserunt atque, perferendis consectetur voluptates aperiam corporis porro labore tempora.
-            </p> 
+            <div class="galleryTitle">
+                <h1>Gallery</h1>
+            </div>
+            <div class="galleryDes">
+                <p>
+                    Want to know how Krishna Hospital looks like from the inside? Provided below are a series of
+                    high-quality pictures of Krishna Hospital's interiors and exteriors. Morever, there are pictures
+                    of additonal services offered at Krishna like the Baby Horoscope, Baby Names and Album book,
+                    New-born Care-kit and many more.
+                </p>
             </div>
             <div class="slider gallerySlider">
                 <div class="slider-items">
@@ -319,10 +329,10 @@
                 </div>
                 <!-- slider controls -->
                 <div class="left-slide"><</div>
-                <div class="right-slide">></div>
-                <!-- slider controls -->
+                        <div class="right-slide">></div>
+                        <!-- slider controls -->
                 </div>
-        </div>
+            </div>
     </section>
 
     <section id="googleMaps">
@@ -360,8 +370,7 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Website Developer's Linked <i
-                class="fab fa-linkedin"></i> &nbsp:
+            <p class="developers">Website Developer's Linked <i class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="" target="_blank">Neelav Bhatiya</a>
                 <a href="" target="_blank">Riya Shah</a>
