Added complete website textual content and updated contact info

--- a/appointment.html
+++ b/appointment.html
@@ -22,7 +22,7 @@
         </div>
         <div class="hospDes"> Krishna Women's Hospital Appointments</div>
         <div class="headInfo">
-            <p class="phone">For Appointment related queries,<br> Contact: <b>+91 9978637506</b></p>
+            <p class="phone">For Appointment related queries,<br> Contact: <b>+91 9408218912 /<br> +91 7874775646</b></p>
         </div>
     </header>
     <div class="mainBlock">
@@ -66,9 +66,9 @@
                 <li class="notePoints">On clicking <b>'Confirm Appointment'</b> a dialog box will appear which says
                     <b>SUCCESS! Your appointment has been successfully booked</b>, after that click <b>'Exit'</b>.</li>
                 <li class="notePoints">After your appointment is booked, you may print the appointment
-                    receipt and show it at hospital reception on appointment day. (Optional)</li>
+                    receipt and show it at hospital reception on appointment day. (Optional but <b>HIGHLY RECOMMENDED</b>)</li>
                 <li class="notePoints">If you are unable to make an appointment or face any other issues, please contact
-                    <b>+91 9978637506</b> for further assistance.</li>
+                    <b>+91 9408218912 / +91 7874775646</b> for further assistance.</li>
             </ul>
         </div>
     </div>
