--- a/services.html
+++ b/services.html
@@ -21,8 +21,8 @@
         </div>
         <div class="hospDes"> Krishna Hospital Services</div>
         <div class="headInfo">
-            <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp <p id='display'
-                    onClick='copyText(this)'>+91 9978637506</p> (click to copy)
+            <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp +91 <p id='display'
+                    onClick='copyText(this)'>9408218912</p> (click to copy)
             </div>
             <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM
                 and 5PM - 7PM
@@ -60,7 +60,7 @@
                     <h1>Krishna Services</h1>
                 </div>
                 <div class="introDes">
-                    Since the past 27 years, Krishna Hospital has offered the best-in-class gynec and obstretic
+                    Since the past 27 years, Krishna Hospital has been consistently offering the best-in-class gynec and obstretic
                     services, from
                     successfully conducting hundreds of high-risk medical procedures to providing excellent hospitality
                     to its patients.
@@ -138,8 +138,7 @@
                     <div class="itemTitle">
                         <h1>3D and 4D Sonography</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus similique quo,
-                        laboriosam,
+                    <div class="itemDes">High-resolution Voluson sonography machines equipped with 3D/4D capabilities and colour doppler.
                     </div>
                 </div>
             </div>
@@ -148,8 +147,7 @@
                     <div class="itemTitle">
                         <h1>Key-Hole Surgery (Laproscopy)</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat cumque
-                        facilis
+                    <div class="itemDes">Hystrectomy, Endometriosis, Fibroid, Ovarian Cyst, Gynec Cancer and many other laproscopic procedures are available.
                     </div>
                 </div>
                 <div class="itemImg oddImg">
@@ -164,8 +162,7 @@
                     <div class="itemTitle">
                         <h1>Gynec Operative Procedures</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas assumenda,
-                        magni
+                    <div class="itemDes">Vaginal Hystrectomy, all-kinds-of Open Gynec Surgeries and Vaginal Surgeries are available. 
                     </div>
                 </div>
             </div>
@@ -174,9 +171,7 @@
                     <div class="itemTitle">
                         <h1>Gynec Cancer Detection</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nemo
-                        incidunt
-                        aperiam optio voluptatibus
+                    <div class="itemDes">Highly Accurate Cancer detection facility for Breast, Ovarian, Vaginal, Cervical, Uterine, Vulvar or any other kind of Gynec Cancer.
                     </div>
                 </div>
                 <div class="itemImg oddImg">
@@ -191,9 +186,7 @@
                     <div class="itemTitle">
                         <h1>New-born Vaccinations</h1>
                     </div>
-                    <div class="itemDes">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, a aperiam
-                        placeat
-                        asperiores</div>
+                    <div class="itemDes">Krishna has an in-house baby vaccination facility to keep your new-born free from any potential ailments.</div>
                 </div>
             </div>
         </div>
@@ -208,15 +201,9 @@
                 <h1>Room Categories</h1>
             </div>
             <div class="medproDes">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsa omnis placeat mollitia at molestias
-                    repudiandae, assumenda quos esse suscipit, voluptatibus quaerat alias. Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Molestias perferendis iusto magni eligendi ipsum a ad quibusdam
-                    similique ipsa accusamus cumque unde ea odit temporibus, eaque iste earum voluptatum deserunt?
+                <p>Over the years, Krishna Hospital has been renowned for its excellent facilites and hospitality. Krishna Hospital has a total  of 15 hospital beds present in 7 rooms and one general ward facility. The rooms are divided in three categories so that the patients have the freedom to pick their room of choice.
                 </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse quia vero ut sit asperiores iure
-                    voluptates architecto saepe, hic sequi temporibus numquam? Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Error quo, placeat hic et libero quaerat temporibus expedita ea officia numquam
-                    suscipit itaque in?</p>
+                <p>Each room consists of one patient bed which is equipped with blood-pressure, oxygen saturation and pulse-rate monitors. Moreover, each room also contains accommodation facilites for the patient's relatives. Depending on the room category, several rooms also offer room air-conditioning, television, fridge, inter-com speakers and other amenities.</p> </p>
             </div>
         </div>
         <div class="roomBlock">
@@ -225,9 +212,7 @@
                     <h1>Deluxe Rooms</h1>
                 </div>
                 <div class="roomDes">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
-                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem ipsum,
-                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    <p>Deluxe rooms are the most premier rooms offered at Krishna. A total of 4 rooms, with each room offering complete air-conditioning, cable television, seperate fridge, etc. Moreover, food services like breakfast, lunch, dinner, snacks and drinks for both the patient and its relatives is available without any extra charges.
                     </p>
                 </div>
             </div>
@@ -241,10 +226,7 @@
                     <h1>Special Rooms</h1>
                 </div>
                 <div class="roomDes">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
-                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
-                        ipsum,
-                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    <p>Special Rooms are the second class of rooms at Krishna. Apart from the usual medical facilities for the patients, these rooms offer cable television, seperate fridge, relatives accommodation and inter-com speakers. However, these rooms are non-air conditioned and provide food services only on seperate demand.
                     </p>
                 </div>
             </div>
@@ -258,11 +240,7 @@
                     <h1>Semi-Special Rooms</h1>
                 </div>
                 <div class="roomDes">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem
-                        dolorum
-                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
-                        ipsum,
-                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    <p>Semi-Special Rooms are the third class of rooms at Krishna. These non-air conditioned rooms offer extremely affordable accommodation with limited facilites. Patient relatives accommodation is available within the room. Other facilities might be made available on additional charges.
                     </p>
                 </div>
             </div>
@@ -276,9 +254,7 @@
                     <h1>General Ward</h1>
                 </div>
                 <div class="roomDes">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
-                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem ipsum,
-                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    <p>These are the fourth class of patient accommodation facility at Krishna. It consists of a large common medical facility which houses 7 beds equipped with medical equipments. Being the most cost-friendly facility, most of the hospitality services can be made available on additional charges.
                     </p>
                 </div>
             </div>
@@ -301,7 +277,7 @@
                 <p>
                     Want to know how Krishna Hospital looks like from the inside? Provided below are a series of
                     high-quality pictures of Krishna Hospital's interiors and exteriors. Morever, there are pictures
-                    of additonal services offered at Krishna like the Baby Horoscope, Baby Names and Album book,
+                    of additional services offered at Krishna like the Baby Horoscope, Baby Names and Album book,
                     New-born Care-kit and many more.
                 </p>
             </div>
@@ -348,10 +324,14 @@
         <div class="contactBlock">
             <div class="contact">
                 <h1>Contact Info</h1>
-                <p> Address - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reiciendis totam illo
-                    suscipit accusamus, blanditiis illum, ad placeat ducimus, unde quasi quis veritatis.</p>
+                <p> <b>Address :</b><br>
+                 Krishna Women's Hospital,<br>
+                    Near Soni Ni Chal Cross Roads, <br>
+                    Odhav, Ahmedabad (East),<br>
+                    Gujarat - 382415.
+                </p>
                 <br>
-                <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp &nbsp+1 (668) 712 3428 <br>
+                <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp +91 9408218912 / +91 7874775646 <br>
                     <img class="mail" src="images/mail_icon.jpg"> krishna.women.hosp@gmail.com
                 </p>
             </div>
@@ -359,20 +339,19 @@
                 <h1>Disclaimer</h1>
                 <div>
                     <ol>
-                        <li>Wearing mask before arriving to the hospital is COMPULSARY.</li>
-                        <li>The online appointment booked above is not binding and may get deffered/cancelled in dire
-                            circumstances</li>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam doloremque consectetur odio
-                            ut rerum eum ex placeat quis. Consequatur, eaque.</li>
+                        <li>According to the goverment COVID-19 protocols, wearing mask before arriving to the hospital is <b>COMPULSARY.</b></li>
+                        <li>The online appointment booked above <b>MAY GET DEFFERED/CANCELLED</b> if the doctor is <b>NOT AVAILABLE</b> due to any emergency, so patients are requested to be cooperative.</li>
+                        <li>Before making an online appointment, patients are highly advised to read the <b>IMPORTANT NOTE</b> provided regarding online appointments.</li>
                     </ol>
                 </div>
             </div>
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Website Developer's Linked <i class="fab fa-linkedin"></i> &nbsp:
+            <p class="developers">Website Developer's Linked <i
+                class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
-                <a href="" target="_blank">Neelav Bhatiya</a>
+                <a href="https://www.linkedin.com/in/neelav-bhatiya-589170216/" target="_blank">Neelav Bhatiya</a>
                 <a href="" target="_blank">Riya Shah</a>
             </p>
         </div>
