--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="hospDes"> Krishna Women's Hospital,<br> Ahmedabad</div>
         <div class="headInfo">
-            <div class="phone"> <img src="images/phone_icon-removebg-preview.png">&nbsp<p id='display'
-                    onClick='copyText(this)'>+91 9978637506</p> (click to copy)</div>
+            <div class="phone"> <img src="images/phone_icon-removebg-preview.png">&nbsp +91 <p id='display'
+                    onClick='copyText(this)'>9408218912</p> (click to copy)</div>
             <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM
                 and 5PM - 7PM
             </div>
@@ -137,7 +137,7 @@
                 <div class="roomDes">
                     <h1><a href="services.html#rooms">Room Categories</a></h1>
                     <p class="clickhere">Click on title to know more</p>
-                    <p>Krishna Hospital has a total 14 fully equipped rooms divided in three categories which
+                    <p>Krishna Hospital has a total 15 medical beds in 7 medically equipped rooms divided in three categories which
                         provides its patients the freedom to pick their room of choice. </p>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="staffDes">
                     <h1>Administrative Staff</h1>
-                    <p>An efficient team of 10 administration staff members ensures proper managment and delivery of all services at Krishna Hospital.</p>
+                    <p>An efficient team of 6 administrative staff members ensures proper managment and delivery of all services at Krishna Hospital.</p>
                 </div>
             </div>
             <div class="staff">
@@ -302,7 +302,7 @@
                 </div>
                 <div class="staffDes">
                     <h1>House-Keeping Staff</h1>
-                    <p> The house-keeping staff team at Krishna consists of 6 members and ensures proper sanitization and hygiene within the hospital premises.</p> </p>
+                    <p> The house-keeping staff team at Krishna consists of 9 members and ensures proper sanitization and hygiene within the hospital premises.</p> </p>
                 </div>
             </div>
         </div>
@@ -342,7 +342,7 @@
                     <li class="discPoints">If the ONLINE appointment gets <b>DELAYED or CANCELLED</b>, then <b>NO EXTRA
                             CHARGES</b> will be applied.</li>
                     <li class="discPoints">To check waiting status or <b>ANY</b> other inquires call: <br> <b>+91
-                            9978637506</b></li>
+                            9408218912 / +91 7874775646</b></li>
                 </ul>
             </div>
             <div class="appointForm">
@@ -405,10 +405,14 @@
         <div class="contactBlock">
             <div class="contact">
                 <h1>Contact Info</h1>
-                <p> Address - Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reiciendis totam illo
-                    suscipit accusamus, blanditiis illum, ad placeat ducimus, unde quasi quis veritatis.</p>
+                <p> <b>Address :</b><br>
+                 Krishna Women's Hospital,<br>
+                    Near Soni Ni Chal Cross Roads, <br>
+                    Odhav, Ahmedabad (East),<br>
+                    Gujarat - 382415.
+                </p>
                 <br>
-                <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp &nbsp+1 (668) 712 3428 <br>
+                <p><img class="phone" src="images/phone_icon-removebg-preview.png"> &nbsp +91 9408218912 / +91 7874775646 <br>
                     <img class="mail" src="images/mail_icon.jpg"> krishna.women.hosp@gmail.com
                 </p>
             </div>
@@ -416,11 +420,9 @@
                 <h1>Disclaimer</h1>
                 <div>
                     <ol>
-                        <li>Wearing mask before arriving to the hospital is COMPULSARY.</li>
-                        <li>The online appointment booked above is not binding and may get deffered/cancelled in dire
-                            circumstances</li>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam doloremque consectetur odio
-                            ut rerum eum ex placeat quis. Consequatur, eaque.</li>
+                        <li>According to the goverment COVID-19 protocols, wearing mask before arriving to the hospital is <b>COMPULSARY.</b></li>
+                        <li>The online appointment booked above <b>MAY GET DEFFERED/CANCELLED</b> if the doctor is <b>NOT AVAILABLE</b> due to any emergency, so patients are requested to be cooperative.</li>
+                        <li>Before making an online appointment, patients are <b>HIGHLY ADVISED</b> to read the <b>IMPORTANT NOTE</b> provided regarding online appointments.</li>
                     </ol>
                 </div>
             </div>
@@ -430,7 +432,7 @@
             <p class="developers">Website Developer's Linked <i
                 class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
-                <a href="" target="_blank">Neelav Bhatiya</a>
+                <a href="https://www.linkedin.com/in/neelav-bhatiya-589170216/" target="_blank">Neelav Bhatiya</a>
                 <a href="" target="_blank">Riya Shah</a>
             </p>
         </div>
