Fact checked content and added developer linkedIN links

--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@
                     <h1>Important Note:</h1>
                 </div>
                 <ul class="discList">
-                    <li class="discPoints">On booking an <b>ONLINE</b> appointment, <b>ADDITIONAL</b> charges <b>WILL BE
-                            APPLIED</b> on top of OPD fees. <br> (For Old Case, please bring your Krishna medical files)
+                    <li class="discPoints">On booking an <b>ONLINE</b> appointment, following charges will be applied for consulting fees. <br> (For Old Case, please bring your Krishna medical files)
                         <ul class="charges">
-                            <li>New Case - Rs. 100 /-</li>
-                            <li>Old Case - Rs. 50 /-</li>
+                            <li>Online booking of Consultation (New Case) - Rs. 500 /-</li>
+                            <li>Online booking of Consultation (Old Case) - Rs. 300 /-</li>
                         </ul>
+                        <p class="note">Extra Charges will be applied on <b>ANY</b> additional services.</p>
                     </li>
                     <li class="discPoints">ONLINE appointments will get the <b>HIGHEST PREFERENCE</b> and will be able
                         to <b>SKIP THE WAITING LINE</b>.</li>
@@ -339,8 +339,7 @@
                     <li class="discPoints">If the consulting doctor is <b>NOT AVAILABLE</b> due to <b>ANY
                             CIRCUMSTANCES</b>, then the appointment may get <b>DELAYED or CANCELLED</b>. And the
                         hospital administration is <b>NOT RESPONSIBLE</b> for it. </li>
-                    <li class="discPoints">If the ONLINE appointment gets <b>DELAYED or CANCELLED</b>, then <b>NO EXTRA
-                            CHARGES</b> will be applied.</li>
+                    <li class="discPoints">If an old case patient comes for consultation after <b>4 months</b> then it will be treated as a <b>NEW CASE</b> and charged as a <b>NEW CASE.</b></li>
                     <li class="discPoints">To check waiting status or <b>ANY</b> other inquires call: <br> <b>+91
                             9408218912 / +91 7874775646</b></li>
                 </ul>
@@ -357,7 +356,7 @@
                             <input type="text" class="form-control" id="name" name="name" placeholder="Full Name" required>
                         </div>
                         <div class="phone">
-                            <label for="phone">Phone Number</label>
+                            <label for="phone">Phone Number (One or more)</label>
                             <br>
                             <input type="tel" class="form-control" id="phone" name="phone" placeholder="Mobile Number" required>
                         </div>
@@ -429,11 +428,11 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Website Developer's Linked <i
+            <p class="developers">Website Developer's <b>Linked</b> <i
                 class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="https://www.linkedin.com/in/neelav-bhatiya-589170216/" target="_blank">Neelav Bhatiya</a>
-                <a href="" target="_blank">Riya Shah</a>
+                <a href="https://www.linkedin.com/in/riya-shah-691a22218/" target="_blank">Riya Shah</a>
             </p>
         </div>
         <div class="topBtn">
