--- a/services.html
+++ b/services.html
@@ -348,11 +348,11 @@
         </div>
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
-            <p class="developers">Website Developer's Linked <i
+            <p class="developers">Website Developer's <b>Linked</b> <i
                 class="fab fa-linkedin"></i> &nbsp:
                 <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
                 <a href="https://www.linkedin.com/in/neelav-bhatiya-589170216/" target="_blank">Neelav Bhatiya</a>
-                <a href="" target="_blank">Riya Shah</a>
+                <a href="https://www.linkedin.com/in/riya-shah-691a22218/" target="_blank">Riya Shah</a>
             </p>
         </div>
         <div class="topBtn">
