replaced mock images with actual hospital images (except visiting doctors)

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="homeDoctor">
                     <div class="homeDocLogo">
-                        <img src="images/mock_doctor_logo.jpg">
+                        <img src="images/dr_nilesh_profile.jpg">
                     </div>
                     <div class="homeDocDes">
                         <h3>Dr Nilesh Trivedi</h3>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="homeRight">
-                <img src="images/mock_dr_img-removebg-preview.png" alt="Dr Nilesh Trivedi">
+                <img src="images/welcome_img.jpg" alt="Dr Nilesh Trivedi">
             </div>
         </div>
     </section>
@@ -103,12 +103,12 @@
                     <p>Since the last 27 years, Krishna hospital has been consistently providing women care services
                         ranging from regular consulation and 3D/4D Sonography to gynec operative procedures like
                         Cesarean section, Hystrectomy, Laproscopy, Colposcopy and many more.</p>
-                    <p>Through its well-trained 24 member nursing team and state-of-the-art medical equipments, every
+                    <p>Through its well-trained 22 member staff team and state-of-the-art medical equipments, every
                         patient at Krishna Hospital is assured of a flawless and comfortable medicare experience.</p>
                 </div>
             </div>
             <div class="aboutRight">
-                <img src="images/mock_about-removebg-preview.png" alt="Krishna Hospital photo">
+                <img src="images/about_krishna.JPG" alt="Krishna Hospital photo">
             </div>
         </div>
     </section>
@@ -121,7 +121,7 @@
         <div class="servicesBlock">
             <div class="section" id="tech">
                 <div class="serviceImg">
-                    <img src="images/mock_tech_image.jpg">
+                    <img src="images/med_pro.jpg">
                 </div>
                 <div class="techDes">
                     <h1><a href="services.html#medpro">Medical Procedures</a></h1>
@@ -132,7 +132,7 @@
             </div>
             <div class="section" id="rooms">
                 <div class="serviceImg">
-                    <img src="images/mock_room_image.jpg">
+                    <img src="images/room_categ.jpg">
                 </div>
                 <div class="roomDes">
                     <h1><a href="services.html#rooms">Room Categories</a></h1>
@@ -143,7 +143,7 @@
             </div>
             <div class="section" id="gallery">
                 <div class="serviceImg">
-                    <img src="images/mock_gallery_image.jpg">
+                    <img src="images/gallery.jpg">
                 </div>
                 <div class="galleryDes">
                     <h1><a href="services.html#gallery">Hospital Gallery</a></h1>
@@ -164,7 +164,7 @@
         <div class="teamDocs">
             <div class="drNilesh">
                 <div class="drNileshImg">
-                    <img src="images/mock_doctor_logo.jpg">
+                    <img src="images/dr_nilesh_profile.jpg">
                 </div>
                 <div class="drNileshDes">
                     <h1>Dr. Nilesh Trivedi</h1>
@@ -248,7 +248,7 @@
         <div class="visitDocsBlock1">
             <div class="visitDocs">
                 <div class="visitDocsImg">
-                    <img src="images/mock_doctor_logo.jpg">
+                    <img src="images/kamini_patel.jpg">
                 </div>
                 <div class="visitDocsDes">
                     <h1>Kamini Patel</h1>
@@ -258,7 +258,7 @@
             </div>
             <div class="visitDocs">
                 <div class="visitDocsImg">
-                    <img src="images/mock_doctor_logo.jpg">
+                    <img src="images/nishith_vasavada.jpg">
                 </div>
                 <div class="visitDocsDes">
                     <h1>Nishith Vasavada</h1>
@@ -268,7 +268,7 @@
             </div>
             <div class="visitDocs">
                 <div class="visitDocsImg">
-                    <img src="images/mock_doctor_logo.jpg">
+                    <img src="images/ravji_prajapati.jpg">
                 </div>
                 <div class="visitDocsDes">
                     <h1>Ravji Prajapati</h1>
@@ -280,7 +280,7 @@
         <div class="staffBlock">
             <div class="staff">
                 <div class="staffImg">
-                    <img src="images/mock_staff_img_2.jpg">
+                    <img src="images/clinical_staff.jpg">
                 </div>
                 <div class="staffDes">
                     <h1>Clinical Staff</h1>
@@ -289,7 +289,7 @@
             </div>
             <div class="staff">
                 <div class="staffImg">
-                    <img src="images/mock_staff_img_2.jpg">
+                    <img src="images/adminstrative_staff.jpg">
                 </div>
                 <div class="staffDes">
                     <h1>Administrative Staff</h1>
@@ -298,7 +298,7 @@
             </div>
             <div class="staff">
                 <div class="staffImg">
-                    <img src="images/mock_staff_img_2.jpg">
+                    <img src="images/house_keeping_staff.jpg">
                 </div>
                 <div class="staffDes">
                     <h1>House-Keeping Staff</h1>
