--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="introImg">
-                <img src="images/ot_room.jpg" alt="facilites">
+                <img src="images/reception.JPG" alt="facilites">
             </div>
         </div>
     </section>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="itemImg oddImg">
-                    <img src="images/mock_gallery_image.jpg" alt="">
+                    <img src="images/consultation.jpg" alt="">
                 </div>
             </div>
             <div class="item">
@@ -217,7 +217,7 @@
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/mock_gallery_image.jpg" alt="">
+                <img src="images/deluxe_room.jpg" alt="">
             </div>
         </div>
         <div class="roomBlock">
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/mock_gallery_image.jpg" alt="">
+                <img src="images/room_categ.jpg" alt="">
             </div>
         </div>
         <div class="roomBlock">
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/mock_gallery_image.jpg" alt="">
+                <img src="images/semi_special.jpg" alt="">
             </div>
         </div>
         <div class="roomBlock">
@@ -254,12 +254,12 @@
                     <h1>General Ward</h1>
                 </div>
                 <div class="roomDes">
-                    <p>These are the fourth class of patient accommodation facility at Krishna. It consists of a large common medical facility which houses 7 beds equipped with medical equipments. Being the most cost-friendly facility, most of the hospitality services can be made available on additional charges.
+                    <p>These are the fourth class of patient accommodation facility at Krishna. It consists of a large common medical facility which houses 5 beds equipped with medical equipments. Being the most cost-friendly facility, most of the hospitality services can be made available on additional charges.
                     </p>
                 </div>
             </div>
             <div class="roomImg">
-                <img src="images/mock_gallery_image.jpg" alt="">
+                <img src="images/general_ward.jpg" alt="">
             </div>
         </div>
 
@@ -277,29 +277,32 @@
                 <p>
                     Want to know how Krishna Hospital looks like from the inside? Provided below are a series of
                     high-quality pictures of Krishna Hospital's interiors and exteriors. Morever, there are pictures
-                    of additional services offered at Krishna like the Baby Horoscope, Baby Names and Album book,
+                    of additional services offered at Krishna like the Baby Horoscope, Baby Album book,
                     New-born Care-kit and many more.
                 </p>
             </div>
             <div class="slider gallerySlider">
                 <div class="slider-items">
                     <div class="itemslider active">
-                        <img src="images/ot_room.jpg" />
+                        <img src="images/gallery.jpg" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/mock_tech_image.jpg" />
+                        <img src="images/reception.JPG" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/mock_room_image.jpg" />
+                        <img src="images/med_pro.jpg" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/mock_staff_img.jpg" />
+                        <img src="images/consultation.jpg" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/mock_gallery_image.jpg" />
+                        <img src="images/all_staff.jpg" />
                     </div>
                     <div class="itemslider">
-                        <img src="images/mock_about-removebg-preview.png" />
+                        <img src="images/ot_theatre.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/waiting_area_2.jpg" />
                     </div>
 
                 </div>
